Revision history for Debug-Filter-PrintExpr
0.03_1	pending
		[pod]
		jekyll fails on '{%' in a code block, so avoid this in POD
		fix example code for given output

0.03	Fri Oct 18 19:18:51 2019 +0200
		[fix]
		set perl minversion

		[doc]
		fixed POD

		[doc]
		fixed README.md

0.02	Mon Oct 14 14:18:13 2019 +0200

		[meta]
		change bugtracker to github

0.01	Mon Oct 14 11:15:34 2019 +0200
		First version, released on an unsuspecting world.
