@@ -6,6 +6,7 @@ use utf8;
 use Debug::Filter::PrintExpr (-debug => 0);
 use Test2::V0;
 use IO::String;
+use Scalar::Util qw/dualvar/;
 
 # get the filehandle ref into our namespace and close it
 our $handle;
@@ -16,9 +17,14 @@ close $handle;
 # capture debug output into $result
 my $result = '';
 $handle = IO::String->new($result);
-my $s = 1;
+my $n = 37;
+#${$n}
+like $result, qr/^line \d+: \$n = $n;$/, 'numeric scalar';
+
+$handle = IO::String->new($result = '');
+my $s = 'xxx';
 #${$s}
-like $result, qr/^line \d+: \$s = '$s';$/, 'scalar';
+like $result, qr/^line \d+: \$s = '$s';$/, 'string scalar';
 
 $handle = IO::String->new($result = '');
 my $t = 2;
@@ -26,7 +32,7 @@ my $t = 2;
 	no warnings qw(void);
 	#${$s, $t}
 }
-like $result, qr/^line \d+: \$s, \$t = '$t';$/, 'list in scalar context';
+like $result, qr/^line \d+: \$s, \$t = $t;$/, 'list in scalar context';
 
 $handle = IO::String->new($result = '');
 my @a = qw{a b};
@@ -37,7 +43,7 @@ like $result, qr/^line \d+: \@a = \($res\);$/, 'array';
 $handle = IO::String->new($result = '');
 #${@a}
 $res = scalar(@a);
-like $result, qr/^line \d+: \@a = '$res';$/, 'array as scalar';
+like $result, qr/^line \d+: \@a = $res;$/, 'array as scalar';
 
 $handle = IO::String->new($result = '');
 my %h = (k1 => 'v1', k2 => 'v2');
@@ -60,8 +66,9 @@ like $result, qr/\(\\\@a, \\\%h\)\[$_\] = [[{]$/m, 'ref list expr' foreach (0..1
 like $result, qr/^\s*\};$/m, 'ref list suffix';
 
 $handle = IO::String->new($result = '');
-#${custom: $s}
-like $result, qr/^custom: \$s = '$s';$/, 'custom label';
+my $s1 = '1';
+#${custom: $s1}
+like $result, qr/^custom: \$s1 = '$s1';$/, 'custom label';
 
 $handle = IO::String->new($result = '');
 #${custom:}
@@ -75,5 +82,33 @@ like $result, qr/^line $lineno:\s*$/, 'lineno';
 $handle = IO::String->new($result = '');
 #${localtime}
 like $result, qr/^line \d+: localtime = '\w{3} \w{3} [ 0-9:]{16}';$/, 'sub in scalar context';
+
+$handle = IO::String->new($result = '');
+my $empty = '';
+#${$empty}
+like $result, qr/^line \d+: \$empty = '';$/, 'empty string';
+
+$handle = IO::String->new($result = '');
+my $zero = 0;
+#${$zero}
+like $result, qr/^line \d+: \$zero = 0;$/, 'zero';
+
+$handle = IO::String->new($result = '');
+my $int = 42;
+#${$int}
+like $result, qr/^line \d+: \$int = 42;$/, 'integer value';
+
+$handle = IO::String->new($result = '');
+my $dual = dualvar(42, 'the answer');
+#${$dual}
+like $result, qr/^line \d+: \$dual = 'the answer' : 42;$/, 'dual values';
+
+$handle = IO::String->new($result = '');
+#"{$dual}
+like $result, qr/^line \d+: \$dual = 'the answer';$/, 'string value';
+
+$handle = IO::String->new($result = '');
+##{$dual}
+like $result, qr/^line \d+: \$dual = 42;$/, 'numeric value';
 
 done_testing;
